# strangebasis

./: .codeclimate.yml  .coveragerc  .editorconfig  .gitattributes  .nitpick.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  cookiecutter.json  firsttimesetup.note  package.json  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yaml  python.yaml  release.yaml
docs/: config.md  contributing.md  documentation.md  faq.md  getting_started.md  pre-commit.md  pre_commit.md
nitpick/: core.toml  strangebasis-github-workflow.toml  strangebasis-nitpick.toml  strangebasis-pre-commit.toml  strangebasis-prettier.toml  strangebasis-readthedocs.toml  style.toml
nitpick/core/: actions.toml  precommit.toml
nitpick/style/: isort.toml
strangebasis/: __init__.py  __main__.py
strangebasis/tests/: conftest.py  test_cookiecutter.py  test_hooks.py
strangebasis/tests/integration/: test_cookiecutter.py  test_strangebasis_ci.py
strangebasis/tests/unit/: test_hello.py
{{cookiecutter.project_name}}/: .editorconfig  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  main.py  package.json  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml  python.yaml
{{cookiecutter.project_name}}/nitpick/: core.toml
{{cookiecutter.project_name}}/nitpick/core/: actions.toml  bashate.toml  commitizen.toml  editorconfig.toml  gitlegal.toml  precommit.toml  pygrep.toml
{{cookiecutter.project_name}}/nitpick/style/: flake8.toml  mypy.toml  prettier.toml  pylint.toml
{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py  test_main.py  test_module.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __main__.py
