[tool.poetry]
name = "strangebasis"
version = "0.1.0"
description = "A digital toolbox and coding standards repository"
authors = ["Skylar <skylar.donlevy.dev@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
commitizen = "^3.30.0"
isort = "^5.13.2"
wemake-python-styleguide = "^0.19.2"
nitpick = "^0.35.0"
cookiecutter = "^2.6.0"
pytest = "^8.3.3"
pytest-mypy-plugins = "^3.1.2"
zap = "^2.1"
coverage = "^7.6.4"
pytest-cov = "^5.0.0"
pylint = "^3.3.1"
flake8-black = "^0.2.0"
flake8-quotes = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[tool.isort]
profile = "black"
line_length = 80
indent = "    "

[tool.pylint]
max-line-length = 80
indent-string = "    "

[tool.flake8]
max-line-length = 80
