[tool.poetry]
name = "strangebasis"
version = "0.1.3"
description = "A digital toolbox and coding standards repository"
authors = ["Skylar <skylar.donlevy.dev@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
commitizen = "^3.30.0"
isort = "^5.13.2"
nitpick = "^0.35.0"
cookiecutter = "^2.6.0"
pytest = "^8.3.3"
pytest-mypy-plugins = "^3.1.2"
zap = "^2.1"
coverage = "^7.6.4"
pytest-cov = "^5.0.0"
flake8-black = "^0.2.0"
flake8-quotes = "^3.4.0"

[tool.poetry.extras]
lint = [ "pylint",]

[tool.poetry.dependencies.pylint]
version = "*"
optional = true


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
indent = "    "

[tool.pylint]
max-line-length = 88
indent-string = "    "

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 120

[tool.nitpick]
style = [
  "py://nitpick/resources/any/commitizen",
  "py://nitpick/resources/any/editorconfig",
  "py://nitpick/resources/any/prettier",
  "py://nitpick/resources/markdown/markdownlint",
  "py://nitpick/resources/presets/nitpick",
  "py://nitpick/resources/python/autoflake",
  "py://nitpick/resources/python/bandit",
  "py://nitpick/resources/python/flake8",
  "py://nitpick/resources/python/github-workflow",
  "py://nitpick/resources/python/isort",
  "py://nitpick/resources/python/mypy",
  "py://nitpick/resources/python/poetry",
  "py://nitpick/resources/python/pylint",
  "py://nitpick/resources/python/radon",
  "py://nitpick/resources/python/readthedocs",
  "py://nitpick/resources/python/312",
]
