[tool.poetry]
name = "strangebasis"
version = "0.2.0"
description = "A digital toolbox and coding standards repository"
authors = ["strangebasis <strangebasistv@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[virtualenvs]
in-project = true
path = ".venv"

[tool.poetry.dependencies]
python = "^3.12"
coverage = {extras = ["toml"], version = "^7.6.10"}

[tool.poetry.extras]
lint = [ "pylint",]

[tool.poetry.dependencies.pylint]
version = "*"
optional = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
update_changelog_on_bump = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
commitizen = "^3.30.0"
isort = "^5.13.2"
nitpick = "^0.35.0"
cookiecutter = "^2.6.0"
pytest = "^8.3.3"
pytest-mypy-plugins = "^3.1.2"
zap = "^2.1"
flake8-black = "^0.2.0"
flake8-quotes = "^3.4.0"
pytest-cov = "^6.0.0"
pytest-dependency = "^0.6.0"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
indent = "    "
skip = [".tox", "build"]
known_first_party = ["tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.black]
line-length = 120

[tool.nitpick]
style = [
    "py://nitpick/resources/javascript/package-json",
    "py://nitpick/resources/markdown/markdownlint",
    "py://nitpick/resources/python/absent",
    "py://nitpick/resources/python/bandit",
    "py://nitpick/resources/python/poetry",
    "py://nitpick/resources/python/pre-commit-hooks",
    "py://nitpick/resources/python/radon",
    "py://nitpick/resources/python/sonar-python",
    "py://nitpick/resources/python/312",
    "./nitpick/core.toml",
    "./nitpick/style.toml"
]

[tool.pytest.ini_options]
addopts = "--ignore={{cookiecutter.project_name}} --cov=."
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    "*/strangebasis_derivative/*",
    "{{cookiecutter.project_name}}/.editorconfig",
    "{{cookiecutter.project_name}}/.gitignore",
    "{{cookiecutter.project_name}}/.pylintrc",
    "{{cookiecutter.project_name}}/LICENSE",
    "*.toml",
    "strangebasis/tests/*.py",
    "strangebasis/tests/integration/*.py",
    "strangebasis/tests/unit/*.py",
    "{{cookiecutter.project_name}}/tests/*.py",
    "{{cookiecutter.project_name}}/CHANGELOG.md",
    "*.json",
]

[tool.mypy]
strict = true
warn_unreachable = true
ignore_missing_imports = true
follow_imports = "normal"
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = false

[tool.bandit]
severity = "Medium"
